--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
     <style>
         body {
             font-family: Arial;
-            margin: 40px;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
             background: #121212;
             color: white;
+        }
+
+        main {
+            padding: 0;
+            margin: 0 40px;
         }
 
         h1 {
@@ -47,17 +54,33 @@
             text-decoration: underline;
             color: hsl(209, 100%, 75%);
         }
+
+        footer {
+            margin-top: auto;
+            text-align: center;
+            padding: 20px;
+            background-color: black;
+            color: white;
+        }
     </style>
 </head>
 
 <body>
-    <h1>Winter PEP Assignments</h1>
-    <p>Completed assignments by Saptaparno Chakraborty (Reg. No. 12313890)</p>
 
-    <ul>
-        <li><a href="./portfolio.html">Assignment 1: Portfolio</a></li>
-        <li><a href="./blog-site.html">Assignment 2: Blog</a></li>
-    </ul>
+    <main>
+        <h1>Winter PEP Assignments</h1>
+        <p>Completed assignments by Saptaparno Chakraborty (Reg. No. 12313890)</p>
+
+        <ul>
+            <li><a href="./portfolio.html">Assignment 1: Portfolio</a></li>
+            <li><a href="./blog-site.html">Assignment 2: Blog</a></li>
+        </ul>
+    </main>
+
+    <footer>
+        &copy; 2026 Saptaparno Chakraborty
+    </footer>
+
 </body>
 
 </html>
