chore: upload my updated cv

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
         <p>I enjoy exploring the enormous world of Computer Science, learning and building things, and expanding my tech
             stack.</p>
         <br />
-        <a id="cv-download-btn" href="./MyCV.pdf" download="Saptaparno-CV.pdf">My CV</a>
+        <a id="cv-download-btn" href="./assets/SaptaparnoChakrabortyCV.pdf" download="SaptaparnoChakrabortyCV.pdf">My CV</a>
     </section>
 
     <section id="skills">
