--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <ul>
             <li><a href="./portfolio.html">Assignment 1: Portfolio</a></li>
             <li><a href="./blog-site.html">Assignment 2: Blog</a></li>
+            <li><a href="./calculator.html">Assignment 3: Calculator</a></li>
         </ul>
     </main>
 
