--- a/calculator.html
+++ b/calculator.html
@@ -8,9 +8,11 @@
         #calculatorContainer {
             border: 4px solid;
             font-size: large;
+            min-width: 241px;
+            max-width: 241px;
         }
         #calculatorDisplay {
-            border: 1px solid;
+            border: 10px solid;
             height: 40px;
             padding: 0px 5px;
         }
@@ -34,7 +36,7 @@
             transform: scale(0.98);
         }
         #clearBtn {
-            width: 85%;
+            width: 95%;
         }
     </style>
 </head>
@@ -48,14 +50,13 @@
             <button class="buttons" onclick="number(3)">3</button><button class="buttons" onclick="add()">+</button><br/>
             <button class="buttons" onclick="number(4)">4</button>
             <button class="buttons" onclick="number(5)">5</button>
-            <button class="buttons" onclick="number(6)">6</button><button class="buttons" onclick="subtract()">-</button><br/>
+            <button class="buttons" onclick="number(6)">6</button> <button class="buttons" onclick="subtract()">-</button><br/>
             <button class="buttons" onclick="number(7)">7</button>
             <button class="buttons" onclick="number(8)">8</button>
-            <button class="buttons" onclick="number(9)">9</button><button class="buttons" onclick="multiply()">*</button><br/>
+            <button class="buttons" onclick="number(9)">9</button> <button class="buttons" onclick="multiply()">*</button><br/>
             <button class="buttons" onclick="number(0)">0</button>
             <button class="buttons" onclick="divide()">/</button>
-            <button class="buttons" onclick="modulo()">%</button>
-            <button class="buttons" onclick="calculate()">=</button>
+            <button class="buttons" onclick="modulo()">%</button><button class="buttons" onclick="calculate()">=</button>
             <button class="buttons" id="clearBtn" onclick="c()">C</button>
         </div>
     </div>
