feat: add todo app mini project (with data persistence using localStorage)

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <li><a href="./portfolio.html">Assignment 1: Portfolio</a></li>
             <li><a href="./blog-site.html">Assignment 2: Blog</a></li>
             <li><a href="./calculator.html">Assignment 3: Calculator</a></li>
+            <li><a href="./todo-app/todo.html">Assignment 4: Todo App</a></li>
         </ul>
     </main>
 
