feat: add bmi calculator

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <li><a href="./blog-site.html">Assignment 2: Blog</a></li>
             <li><a href="./calculator.html">Assignment 3: Calculator</a></li>
             <li><a href="./todo-app/todo.html">Assignment 4: Todo App</a></li>
+            <li><a href="./bmi-calc.html">Assignment 5: BMI Calculator</a></li>
         </ul>
     </main>
 
