feat: add counter mini project

--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
         <p>Completed assignments by Saptaparno Chakraborty (Reg. No. 12313890)</p>
 
         <ul>
-            <li><a href="./portfolio.html">Assignment 1: Portfolio</a></li>
-            <li><a href="./blog-site.html">Assignment 2: Blog</a></li>
-            <li><a href="./calculator.html">Assignment 3: Calculator</a></li>
-            <li><a href="./todo-app/todo.html">Assignment 4: Todo App</a></li>
-            <li><a href="./bmi-calc.html">Assignment 5: BMI Calculator</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="./blog-site.html">Blog</a></li>
+            <li><a href="./calculator.html">Calculator</a></li>
+            <li><a href="./bmi-calc.html">BMI Calculator</a></li>
+            <li><a href="./todo-app/todo.html">Todo App</a></li>
+            <li><a href="./counter/counter.html">Counter</a></li>
         </ul>
     </main>
 
