feat: add 2 new React mini projects - userprofile cards w role-based colours - a simple controlled form

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <li><a href="./bmi-calc.html">BMI Calculator</a></li>
             <li><a href="./counter/counter.html">Counter</a></li>
             <li><a href="./todo-app/todo.html">Todo App</a></li>
+            <li><a href="./userprofile.html">User Profile Cards with Role-Based Colours</a></li>
+            <li><a href="./controlled-form.html">A Simple Controlled Form</a></li>
         </ul>
     </main>
 
